# osgQT-Minimal-Example

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  CommonFunctions.cpp  CommonFunctions.h  main.cpp
